Change path to calendar get endpoint (#243)
* build shared first

* docs: update openapi spec for calendar date

* revert change

* updated api types

* feat: added calendar_days endpoint and service

* added dummy test to make ci-test pass in pipeline

* refactor

* feat: change endpoint for calendar days

* added example output
