# backend/src/api/controllers/calendarController.ts
@@ -14,12 +14,10 @@ export default function calendarController(router: Router) {
     }
   })
 
-  router.get('/calendar/:fromYear-:fromMonth-:fromDay-:toYear-:toMonth-:toDay', skipAuth, async (req, res) => {
+  router.get('/calendar', skipAuth, async (req, res) => {
     try {
-      // TODO MIM-2661: Refactor and make sure errors are handled
-      const { fromYear, fromMonth, fromDay, toYear, toMonth, toDay } = req.params
-      const from = fromYear + '-' + fromMonth + '-' + fromDay
-      const to = toYear + '-' + toMonth + '-' + toDay
+      const from = req.query?.fromDate?.toString()
+      const to = req.query?.toDate?.toString()
       const result = await getDateStatusForRange(prisma, from, to)
       res.json(result)
     } catch (error) {
